@@ -1451,7 +1451,7 @@ This table has a cell spanning two columns:
 \setlength{\DUtablewidth}{\linewidth}
 \begin{longtable}[c]{|p{0.075\DUtablewidth}|p{0.075\DUtablewidth}|p{0.086\DUtablewidth}|}
 \hline
-\multicolumn{2}{|l|}{\textbf{%
+\multicolumn{2}{|p{0.15\DUtablewidth}|}{\textbf{%
 Inputs
 }} & \textbf{%
 Output
@@ -1467,7 +1467,7 @@ A or B
 \hline
 \endfirsthead
 \hline
-\multicolumn{2}{|l|}{\textbf{%
+\multicolumn{2}{|p{0.15\DUtablewidth}|}{\textbf{%
 Inputs
 }} & \textbf{%
 Output
